# aiogram_v2_tortoise_template

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py  loader.py
bot/configs/: config.py
bot/handlers/: generals.py
bot/keyboards/: inline.py
bot/middlewares/: set_user.py
bot/models/: __init__.py  user.py
